--- a/landing-page/style-index.css
+++ b/landing-page/style-index.css
@@ -1,6 +1,7 @@
 *{
-    margin:;
+    margin: 0;
     padding: 0;
+    box-sizing:border-box;
 }
  
 body{
@@ -17,12 +18,124 @@ img:hover{
 }
 /* estilo HEADER*/
 
-header{
+/* header{
     background: tomato;
     height: 50px;
-}
+} */
 
 /* estilo HEADER*/
+
+/* estilo BARRA DE NAVEGACAO */
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: sticky;
+    top: 0;
+}
+
+.navbar ul{
+    display: flex;
+    list-style: none;
+    margin: 20px 0px;
+}
+
+.navbar ul li {
+    font-family: Arial;
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.navbar ul li a{
+    text-decoration: none;
+    color: white;
+    padding: 8px 25px;
+    transition: all .5s ease
+}
+
+.navbar ul li a:hover{
+    background-color: white;
+    color: black;
+    box-shadow: 0 0 10px white;
+}
+
+/* estilo BARRA DE NAVEGACAO */
+
+/* estilo HOME */
+
+#home {
+    display: flex;
+    flex-direction: column;
+    /* background-color: rgba(0, 0, 0, 0.5); */
+    height: 500px;
+    justify-content: center;
+    align-items: center;
+    color: white;
+
+}
+
+#home::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 50%;
+  background: url('img/f4life.png') no-repeat center center/cover;
+  height: 500px;
+  width: 50%;
+  z-index: -1;
+  opacity: .8;
+}
+
+
+
+.homediv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 30%;
+    right: 10%;
+}
+
+.homediv p {
+    text-align: center;
+}
+
+.homediv ul.no-bullets {
+    list-style-type: none; /* Remove bullets */
+    padding: 0; /* Remove padding */
+    margin: 0; /* Remove margins */
+    text-align: center;
+  }
+
+.headings{
+    font-family: Georgia;
+
+    font-size: 2rem;
+    text-align: center;
+    margin: 20px 0px;
+}
+
+.btn{
+    padding: 10px 35px;
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+    outline: none;
+    transition: .6s ease;
+}
+
+.btn:hover{
+    cursor: pointer;
+    background-color: white;
+    color: black;
+    box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white;
+    font-weight: bold;
+}
+/* estilo HOME */
+
 
 /* estilo MAIN*/   
 
@@ -51,6 +164,54 @@ header{
     margin-left: 300px
 }
 
+/* CONTATO */
+#contact{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 20px;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    align-items: center;
+    margin: 20px 0px;
+}
+
+.input{
+    padding: 12px;
+    margin: 15px;
+    width: 30%;
+    border: none;
+    outline: none;
+}
+
+#msg{
+    width: 20%;
+    padding: 10px;
+    margin: 15px;
+    border: none;
+    outline: none;
+}
+
+#send{
+    padding: 10px;
+    width: 10%;
+    margin: 40px;
+    border: none;
+    outline: none;
+}
+
+#send:hover{
+    cursor: pointer;
+    box-shadow: 0 0 10px white;
+}
+/* CONTATO */
+
 /* estilo MAIN*/
 
 /* estilo FOOTER*/
@@ -67,19 +228,6 @@ footer img{
     padding: 10px;
 }
 
-.formulario-de-contato{
-    caret-color: #ff0043;
-    color: #19fcf6;
-    margin-left: 150px;
-    border: solid 2px white;
-    font-family: monospace;
-}
-.formulario-de-contato .nome{
-    margin-left: 21px;
-}
-.formulario-de-contato .email{
-    margin-left: 7px;
-}
 .redes-sociais{
     display: flex;
     background-color: #19fcf6;
